litmask/tests/compile/mask_format_invalid_placeholder_name.stderr
error: mask_format! invalid-placeholder: `1abc` is not a valid Rust identifier and cannot be used as an implicit-capture placeholder
  --> tests/compile/mask_format_invalid_placeholder_name.rs:10:26
   |
10 |     let _ = mask_format!("{1abc}");
   |                          ^^^^^^^^
